hard-gists/1036883/run.log
=== Docker Run Log for 1036883 ===
Started at: Mi 29. Okt 11:46:08 CET 2025

[2025-10-29 11:46:09] START: Running container for 1036883
[2025-10-29 11:46:09] SUCCESS: Container 8166fea308db8fbfd2a6401d5028a1e71239d6a19873748d562739db285bd591 started for 1036883
=== Container logs for 1036883 ===
  File "/snippet.py", line 35
    except Empty, e:
           ^^^^^^^^
SyntaxError: multiple exception types must be parenthesized
=== End of logs for 1036883 ===
[2025-10-29 11:46:11] INFO: Container 8166fea308db8fbfd2a6401d5028a1e71239d6a19873748d562739db285bd591 has stopped
